--- a/.gitignore
+++ b/.gitignore
@@ -5,13 +5,18 @@
 */Intermediate/
 */Saved/
 */Binaries/
-*/Content
 */Build/
 */DerivedDataCache/
-*/*.sln
+*/Content/LevelPrototyping/
+*/Content/__ExternalObjects__/
+*/Content/Characters/
+*/Content/StarterContent/
+*/Content/__ExternalActors__/
+
 
 #######################
 # Visual Studio Files #
 #######################
 */.vs/
 *.vsconfig
+*/*.sln
